--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "Bookworm Light Astro | Blog Template",
-    "base_url": "https://bookworm-light-astro.vercel.app",
+    "base_url": "127.0.0.1/static",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
